compiler/src/compile/snapshots/compiler__compile__struct_visitor__tests__struct_visitor_fail_snapshot_tests@duplicate_field_name_fail.tapir.snap
---
source: compiler/src/compile/struct_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: compiler/src/compile/snapshot_tests/struct_visitor/duplicate_field_name_fail.tapir
---
[E0040] Error: field `x` is already defined in struct `Bad`
   ╭─[ duplicate_field_name_fail.tapir:1:30 ]
   │
 1 │ struct Bad { x: int, y: fix, x: bool }
   │              ┬               ┬  
   │              ╰────────────────── Originally declared here
   │                              │  
   │                              ╰── Also declared here
───╯
