compiler/src/compile/snapshots/compiler__compile__struct_visitor__tests__struct_visitor_fail_snapshot_tests@operator_primitive_only_fail.tapir.snap
---
source: compiler/src/compile/struct_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: compiler/src/compile/snapshot_tests/struct_visitor/operator_primitive_only_fail.tapir
---
[E0047] Error: operator function for `int` and `int` requires at least one struct type
   ╭─[ operator_primitive_only_fail.tapir:2:8 ]
   │
 2 │ fn int + int(a, b) -> int {
   │    ─┬─ ┬ ─┬─  
   │     ╰───────── This has type int
   │        │  │   
   │        ╰────── Function defined here
   │           │   
   │           ╰─── This has type int
───╯
